# a-peirogon.github.io

./: .gitignore  a-peirogon.cabal  about.html  about.md  books.md  build.sh  css_fix.py  feed.xml  flake.nix  index.html  oxide-website.cabal  research.html  research.md  site.hi  site.hs  stack.yaml
.github/workflows/: deploy.yml
books/: index.html
css/: colors.css  dark-mode.css  fonts.css  icons.css  main.css
js/: anchors.js  fix-footnotes.js  katex-config.js  sidenotes.js
posts/: 2021-04-30-Class-number.html  2021-04-30-Class-number.md  test.html  test.md
templates/: default.html  post.html
